GPT-3 loop summarization
Added  the code to support summarizing subsections of submitted text

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,4 +18,8 @@
   {% if result %}
   <div class="result">{{ result }}</div>
   {% endif %}
+  {% if formatted_result %}
+  <div class="formatted result">{{ formatted_result }}</div>
+  {% endif %}
+
 </body>
