better home page, adding some comments, url and file form

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='gentle-electro-design.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/gentle-electro-design.css') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap" rel="stylesheet">
@@ -38,12 +38,12 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container text-center">
         <div class="thebigtext">
             What is this project?
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container text-center">
         <p>"What is this crap?" - Harry Callahan aka. Dirty Harry about this project</p>
 
         <img src="https://fwcdn.pl/webv/41/01/34101/brudny.34101.4.jpg">
