--- a/templates/example.html
+++ b/templates/example.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>example</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='gentle-electro-design.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/gentle-electro-design.css') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap" rel="stylesheet">
@@ -38,11 +38,11 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container text-center">
         <div class="thebigtext">Look and You will find an example</div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container text-center">
         <p>There will be description of example that will show how to use this app.</p>
     </div>
 
