ideas for pages, new comments, adding js file in static/js folder

--- a/templates/example.html
+++ b/templates/example.html
@@ -38,12 +38,41 @@
             </div>
         </div>
     </nav>
+    <!-- that big beutiful text at the top -->
     <div class="container text-center">
         <div class="thebigtext">Look and You will find an example</div>
     </div>
 
-    <div class="container text-center">
-        <p>There will be description of example that will show how to use this app.</p>
+    <!-- the description of an example -->
+    <div class="container text-jutify">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <p>There will be description of example that will show how to use this app.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- an audio player, a button summarize, a column in which summary shows up -->
+    <div class="container text-justify">
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <div class="row">
+                    <div class="col">
+                        Tutaj wstawić odtwarzacz audio
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            Tutaj będzie przycisk summarize
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- thats the summary col -->
+            <div class="col-4">
+                Tutaj wypisywać podsumowanie
+            </div>
+        </div>
     </div>
 
 
