--- a/templates/about.html
+++ b/templates/about.html
@@ -38,15 +38,24 @@
             </div>
         </div>
     </nav>
+
+    <!-- that beutiful text at the top -->
     <div class="container text-center">
         <div class="thebigtext">
             What is this project?
         </div>
     </div>
-    <div class="container text-center">
-        <p>"What is this crap?" - Harry Callahan aka. Dirty Harry about this project</p>
-
-        <img src="https://fwcdn.pl/webv/41/01/34101/brudny.34101.4.jpg">
+    <div class="container text-justify">
+        <div class="row justify-content-center">
+            <div class="col-7">
+                 <p>"What is this crap?" - Harry Callahan aka. Dirty Harry about this project</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-7">
+                <img src="https://fwcdn.pl/webv/41/01/34101/brudny.34101.4.jpg">
+            </div>
+        </div>
     </div>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
