--- a/templates/summary.html
+++ b/templates/summary.html
@@ -50,8 +50,10 @@
 
     <!-- that beutiful text at the top -->
     <div class="container text-center">
-        <div class="thebigtext">
-            Summar'z36
+        <div class="typewriter">
+            <div class="thebigtext">
+                Summar'z36
+            </div>
         </div>
     </div>
 
