--- a/static/css/gentle-electro-design.css
+++ b/static/css/gentle-electro-design.css
@@ -25,7 +25,7 @@ p {
     text-align: justify;
 }
 
-h2{
+h2 {
     font-family: 'VT323', monospace;
     text-align: center;
 }
@@ -55,26 +55,26 @@ body {
     font-size: 16pt;
 }
 
-#formFile{
+#formFile {
     color: grey;
-    
+
 }
 
-/* #video-url{
+#video-url{
+    margin-bottom: 0;
+}
 
-} */
-
-#url-button{
+#url-button {
     margin-top: 4px;
     background-color: #9FC6D3;
     color: black;
     border-color: #897F9E;
     border-width: 2px;
-    
-    
+
+
 }
 
-#audio-file-button{
+#audio-file-button {
     font-family: 'VT323', monospace;
     font-size: larger;
     margin-top: 4px;
@@ -83,4 +83,90 @@ body {
     border-color: #6F1A07;
     border-width: 2px;
 
+}
+
+#url-label{
+    margin-bottom: 8px;
+}
+
+/* animation typing zone */
+.typewriter p{
+    max-width: min-content;
+    width: min-content;
+    box-sizing: border-box;
+    height: min-content;
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: 0.5em solid #6F1A07;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Adjust as needed */
+    animation:
+        typing 3s steps(40, end),
+        blink-caret 2s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: #6F1A07;
+    }
+}
+
+.typewriter .thebigtext{
+    margin: auto;
+    max-width: min-content;
+    width: min-content;
+    box-sizing: border-box;
+    height: min-content;
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: 0.3em solid #6F1A07;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Adjust as needed */
+    animation:
+        typing 2s steps(40, end),
+        blink-caret .75s step-end;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: #6F1A07;
+    }
 }
