href in summary

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -62,13 +62,17 @@
     <div class="row justify-content-center">
         <div class="col-5">
             <h2>
-                Transcript
+                <a href="{{ path_to_transcript }}">
+                    Transcript
+                </a>
             </h2>
             <hr>
         </div>
         <div class="col-5">
             <h2>
-                Summary
+                <a href="{{ path_to_summary }}">
+                    Summary
+                </a>
             </h2>
             <hr>
         </div>
