--- a/templates/about.html
+++ b/templates/about.html
@@ -28,9 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/">home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/example">example</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="/example">example</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link active" href="/about">about</a>
                     </li>
@@ -48,7 +48,8 @@
     <div class="container text-justify">
         <div class="row justify-content-center">
             <div class="col-7">
-                 <p>"What is this crap?" - Harry Callahan aka. Dirty Harry about this project</p>
+                 <p>This is a small webservice project that allows you to upload a mp3 audio while that then gets transcribed and summarized by openAi models. The project was realized as part of OpenAI Whisper, GPT3, Codex & DALL-E 2 Hackathon together with colonelWalterKurtz and PioSikorski. </p>
+                 <a href="https://github.com/AR621/Summ3r-y">https://github.com/AR621/Summ3r-y/a>
             </div>
         </div>
         <div class="row justify-content-center">
