--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/example">example</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="/example">example</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="/about">about</a>
                     </li>
