--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">home</a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="/example">example</a>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="/example">example</a>-->
+                    <!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="/about">about</a>
                     </li>
@@ -56,11 +56,9 @@
     <div class="container text-justify">
         <div class="row justify-content-center">
             <div class="col-6">
-                <div class="typewriter">
-                    <p id="audio-label-text">chose and audio file and get, a transcript of it. just make sure it is
+                    <p>chose an audio file and get, a transcript of it. just make sure it is
                         mp3 file</p>
                 </div>
-            </div>
         </div>
     </div>
 
@@ -81,11 +79,9 @@
             <div class="col-6">
                 <div class="mb-3">
                     <label for="video-url" class="form-label">
-                        <div class="typewriter">
                             <p id="url-label">
-                                no audio file? just paste the url and we will do the work
+                                no audio file? just paste the url, we will do the re
                             </p>
-                        </div>
                         <form method="post" enctype="multipart/form-data">
                             <input type="url" placeholder="video url" name="video_url" id="url" class="form-control">
                             <input type="submit" id="url-button" name="url_button" value="paste"
