--- a/templates/old_templates/about.html
+++ b/templates/old_templates/about.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}base{% endblock %}</title>
-    <!-- using our own css -->
+    <title>about</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/gentle-electro-design.css') }}" />
-    <!-- adding some fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap" rel="stylesheet">
@@ -16,8 +14,6 @@
         @import url('https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap');
     </style>
 </head>
-
-{% set current_url = request.path %}
 
 <body style="background-color: #F5F0E8">
     <nav class="navbar navbar-expand-md">
@@ -30,46 +26,39 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/' %}active{% endif %}" href="/">home</a>
+                        <a class="nav-link" aria-current="page" href="/">home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">example</a>
-                    </li> -->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="/example">example</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/about' %}active{% endif %}" href="/about">about</a>
+                        <a class="nav-link active" href="/about">about</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <hr>
+
+    <!-- that beutiful text at the top -->
+    <div class="container text-center">
+        <div class="thebigtext">
+            What is this project?
+        </div>
+    </div>
+    <div class="container text-justify">
+        <div class="row justify-content-center">
+            <div class="col-7">
+                 <p>This is a small webservice project that allows you to upload a mp3 audio while that then gets transcribed and summarized by openAi models. The project was realized as part of OpenAI Whisper, GPT3, Codex & DALL-E 2 Hackathon together with colonelWalterKurtz and PioSikorski. </p>
+                 <a href="https://github.com/AR621/Summ3r-y">https://github.com/AR621/Summ3r-y/a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-7">
+                <img src="https://fwcdn.pl/webv/41/01/34101/brudny.34101.4.jpg">
             </div>
         </div>
     </div>
 
-    {% block content %}
-    {% endblock %}
-
-    <div class="container-fluid">
-        <footer class="py-3 my-4 border-top text-center">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <span class="text-muted">© 2022 B1w0 organization</span>
-                    <a href="https://github.com/B1w0">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
-                            alt="github link" width="25px">
-                    </a>
-                </div>
-            </div>
-        </footer>
-    </div>
-
-
-
-    <!-- adding bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
