--- a/templates/old_templates/summary.html
+++ b/templates/old_templates/summary.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}base{% endblock %}</title>
+    <title>Summary</title>
     <!-- using our own css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/gentle-electro-design.css') }}" />
     <!-- adding some fonts -->
@@ -16,8 +16,6 @@
         @import url('https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap');
     </style>
 </head>
-
-{% set current_url = request.path %}
 
 <body style="background-color: #F5F0E8">
     <nav class="navbar navbar-expand-md">
@@ -30,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/' %}active{% endif %}" href="/">home</a>
+                        <a class="nav-link active" aria-current="page" href="/">home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">example</a>
-                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/about' %}active{% endif %}" href="/about">about</a>
+                        <a class="nav-link" href="/example">example</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">about</a>
                     </li>
                 </ul>
             </div>
@@ -50,26 +48,49 @@
         </div>
     </div>
 
-    {% block content %}
-    {% endblock %}
-
-    <div class="container-fluid">
-        <footer class="py-3 my-4 border-top text-center">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <span class="text-muted">© 2022 B1w0 organization</span>
-                    <a href="https://github.com/B1w0">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
-                            alt="github link" width="25px">
-                    </a>
-                </div>
+    <!-- that beutiful text at the top -->
+    <div class="container text-center">
+        <div class="typewriter">
+            <div class="thebigtext">
+                Summar'z36
             </div>
-        </footer>
+        </div>
     </div>
 
+    <!-- the transcript and summary divs -->
+    <div class="container text-justify"></div>
+    <div class="row justify-content-center">
+        <div class="col-md-5 col-sm-10">
+            <div class="row justify-content-center">
+                <h2>
+                    <a href="{{ path_to_transcript }}">
+                        Transcript
+                    </a>
+                </h2>
+                <hr>
+            </div>
+            <div class="row justify-content-center">
+                <p>{{ audio_transcript }}</p>
+            </div>
+        </div>
+        <div class="col-md-5 col-sm-10">
+            <div class="row justify-content-center">
+                <h2>
+                    <a href="{{ path_to_summary }}">
+                        Summary
+                    </a>
+                </h2>
+                <hr>
+            </div>
+            <div class="row justify-content-center">
+                    <p>{{ summary_text }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
 
 
-    <!-- adding bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
