--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,101 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary</title>
-    <!-- using our own css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/gentle-electro-design.css') }}" />
-    <!-- adding some fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap" rel="stylesheet">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap');
-    </style>
-</head>
+{% block title %}Summary{% endblock %}
 
-<body style="background-color: #F5F0E8">
-    <nav class="navbar navbar-expand-md">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/example">example</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">about</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <hr>
-            </div>
+{% block content %}
+
+<!-- that beutiful text at the top -->
+<div class="container text-center">
+    <div class="typewriter">
+        <div class="thebigtext">
+            Summar'z36
         </div>
     </div>
+</div>
 
-    <!-- that beutiful text at the top -->
-    <div class="container text-center">
-        <div class="typewriter">
-            <div class="thebigtext">
-                Summar'z36
-            </div>
+<!-- the transcript and summary divs -->
+<div class="container text-justify"></div>
+<div class="row justify-content-center">
+    <div class="col-md-5 col-sm-10">
+        <div class="row justify-content-center">
+            <h2>
+                <a href="{{ path_to_transcript }}">
+                    Transcript
+                </a>
+            </h2>
+            <hr>
+        </div>
+        <div class="row justify-content-center">
+            <p>{{ audio_transcript }}</p>
         </div>
     </div>
-
-    <!-- the transcript and summary divs -->
-    <div class="container text-justify"></div>
-    <div class="row justify-content-center">
-        <div class="col-md-5 col-sm-10">
-            <div class="row justify-content-center">
-                <h2>
-                    <a href="{{ path_to_transcript }}">
-                        Transcript
-                    </a>
-                </h2>
-                <hr>
-            </div>
-            <div class="row justify-content-center">
-                <p>{{ audio_transcript }}</p>
-            </div>
+    <div class="col-md-5 col-sm-10">
+        <div class="row justify-content-center">
+            <h2>
+                <a href="{{ path_to_summary }}">
+                    Summary
+                </a>
+            </h2>
+            <hr>
         </div>
-        <div class="col-md-5 col-sm-10">
-            <div class="row justify-content-center">
-                <h2>
-                    <a href="{{ path_to_summary }}">
-                        Summary
-                    </a>
-                </h2>
-                <hr>
-            </div>
-            <div class="row justify-content-center">
-                    <p>{{ summary_text }}</p>
-                </div>
-            </div>
+        <div class="row justify-content-center">
+            <p>{{ summary_text }}</p>
         </div>
     </div>
-    <hr>
+</div>
+</div>
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
