--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap');
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8742701288705234"
+     crossorigin="anonymous"></script>
 </head>
 
 {% set current_url = request.path %}
