--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if current_url == '/' %}active{% endif %}" href="/">home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">example</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">example_of_use</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link {% if current_url == '/about' %}active{% endif %}" href="/about">about</a>
                     </li>
