--- a/templates/about.html
+++ b/templates/about.html
@@ -7,16 +7,16 @@
 <!-- that beutiful text at the top -->
 <div class="container text-center">
     <div class="thebigtext">
-        Whait is Summ3r-y?
+        What is Summ3r-y?
     </div>
 </div>
 <div class="container text-justify">
     <div class="row justify-content-center">
         <div class="col-10">
             <h2>Legend</h2>
-            <p>This is a small webservice project that allows you to upload a mp3 audio while that then gets transcribed
+            <p>This is a small webservice project that allows you to upload an mp3 audio which then gets transcribed
                 and summarized by openAi models. The project was realized as part of OpenAI Whisper, GPT3, Codex &
-                DALL-E 2 Hackathon together with colonelWalterKurtz and PioSikorski. </p>
+                DALL-E 2 Hackathon. </p>
             <a href="https://github.com/AR621/Summ3r-y">Github repository link -> https://github.com/AR621/Summ3r-y/
             </a>
 
@@ -35,8 +35,8 @@
             </ul>
 
             <h2>Overview</h2>
-            <p>Main page contains a UI for uploading mp3 files, after submission a request is sent to openAi whisper
-                which transcribes the audio into a text file. The transcript is then forwarded into openAi NLP Curie
+            <p>Main page contains a UI for uploading mp3 files, after submission openAi whisper model transcribes the audio into a text file.
+                The transcript is then forwarded into openAi GPT Curie
                 model which summarizes the given transcript to shorten it. </p>
             <p>After that is done the results are then displayed in summary page side by side with the transcripts where
                 both files can be downloaded.</p>
