Fixed unfinished expression on url input section

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <div class="mb-3">
                 <label for="video-url" class="form-label">
                     <p id="url-label">
-                        no audio file? just paste the url, we will do the re
+                        no audio file? just paste the url, we will do the rest ;)
                     </p>
                     <form method="post" enctype="multipart/form-data">
                         <input type="url" placeholder="video url" name="video_url" id="url" class="form-control">
