Updated example text and summary texts

--- a/templates/example.html
+++ b/templates/example.html
@@ -30,13 +30,15 @@
                 <hr>
             </div>
             <div class="row justify-content-center"></div>
-                Lorem ipsum, tralalalalala jestem ślepym tekstem
+                 Summarize is a simple web application that allows you to submit an mp3 file or a YouTube video link, which then, through the power of AI, gets summarized for you. You also get a full transcript of the audio or video that you've provided. Both files, the summary and the full transcript can be downloaded after the summarization process is complete.
+
+
             <div class="row justify-content-center">
                 <h2>summary</h2>
                 <hr>
             </div>
             <div class="row justify-content-center">
-                Lorem ipsum ale, znacznie zwięźlej
+Summarize is a web application that allows users to submit mp3 or YouTube links for summarization. The AI then produces a summary of the audio or video, as well as a transcript. The summary and transcript files can be downloaded after the summarization process is complete.
             </div>
         </div>
     </div>
