flash msg at the bottom of index; example_of_use is how_2? now; how_2? refactored; how_2? script.js functionality;

--- a/summ3ry/templates/base.html
+++ b/summ3ry/templates/base.html
@@ -35,7 +35,7 @@
                         <a class="nav-link {% if current_url == '/' %}active{% endif %}" href="/">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">example_of_use</a>
+                        <a class="nav-link {% if current_url == '/example' %}active{% endif %}" href="/example">how_2?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if current_url == '/about' %}active{% endif %}" href="/about">about</a>
