--- a/summ3ry/templates/index.html
+++ b/summ3ry/templates/index.html
@@ -32,19 +32,7 @@
             </div>
         </div>
     </div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class=flashes>
-        {% for message in messages %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong>{{ message }}</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %}
-    {% block body %}{% endblock %}
+
     <div class="row justify-content-center">
         <div class="col-6">
             <div class="mb-3">
@@ -60,7 +48,27 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="mb-3">
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>{{ message }}</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                {% endwith %}
+                {% block body %}{% endblock %}
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <script src="{{url_for('static', filename='js/script.js')}}"></script>
 {% endblock %}
