how_2? wraps beutifully when screen is small; iframe has normal dimensions

--- a/summ3ry/static/css/gentle-electro-design.css
+++ b/summ3ry/static/css/gentle-electro-design.css
@@ -113,6 +113,12 @@ body {
     display: none;
 }
 
+#example-short-video {
+    width: 100%;
+    max-width: 300px;
+    height: max-content;
+}
+
 /* animation typing zone */
 .typewriter p {
     word-wrap: break-word;
