--- a/summ3ry/templates/base.html
+++ b/summ3ry/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arvo&family=VT323&display=swap');
     </style>
@@ -59,7 +60,7 @@
         <footer class="py-3 my-4 border-top text-center">
             <div class="row justify-content-center">
                 <div class="col-12">
-                    <span class="text-muted">© 2022 B1w0 organization</span>
+                    <span class="text-muted">© 2023 B1w0 organization</span>
                     <a href="https://github.com/B1w0">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
                             alt="github link" width="25px">
